--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,13 @@
         </div>
       </div>
     </div>
-    <div class="container" ng-controller="sensorController">
+    <div class="container">
       <div class="hero-unit">
-        <h1>Bienvenue !</h1>
+        <h1>Bienvenue {{12+1}}  !</h1>
       </div>
     </div>
+
+    <script type="text/javascript" src="js/angular/angular.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
