--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container" ng-controller="sensorController">
       <div class="hero-unit">
-        <h1>Bienvenue {{12+1}}  !</h1>
+        <h1>Tension : {{tension}} mV</h1>
       </div>
     </div>
 
