--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       </div>
     </div>
 
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/angular/angular.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
