--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
+      meter {
+        height: 50px;
+        width: 100%;
+      }
       </style>
   </head>
   <body>
@@ -21,8 +25,22 @@
     <div class="container" ng-controller="sensorController">
       <div class="hero-unit">
         <h1>Tension : {{tension}} mV</h1>
+        <br>
+        <meter min="0" max="3000" value="{{tension}}">{{tension}}</meter>
+        <br>
+        <h1>Note : {{note}}</h1>
       </div>
     </div>
+
+    <script src="./js/MIDI/AudioDetect.js" type="text/javascript"></script>
+    <script src="./js/MIDI/LoadPlugin.js" type="text/javascript"></script>
+    <script src="./js/MIDI/Plugin.js" type="text/javascript"></script>
+    <script src="./js/MIDI/Player.js" type="text/javascript"></script>
+    <script src="./js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
+    <script src="./js/Window/DOMLoader.script.js" type="text/javascript"></script>
+    <!-- extras -->
+    <script src="./inc/Base64.js" type="text/javascript"></script>
+    <script src="./inc/base64binary.js" type="text/javascript"></script>
 
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/angular/angular.js"></script>
